<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:title="@string/add"
        android:id="@+id/item_add_token"
        android:icon="@drawable/ic_action_add"
        app:contentDescription="@string/add"
        app:showAsAction="ifRoom" />

    <item
        android:title="@string/qr"
        android:id="@+id/item_qr"
        android:icon="@drawable/ic_action_qr"
        app:contentDescription="@string/qr"
        app:showAsAction="ifRoom" />

    <item
        android:title="@string/title_export"
        android:id="@+id/item_export"
        android:icon="@drawable/ic_action_export"
        app:contentDescription="@string/title_export"
        app:showAsAction="ifRoom" />

    <item
        android:title="@string/title_import"
        android:id="@+id/item_import"
        android:icon="@drawable/ic_action_import"
        app:contentDescription="@string/title_import"
        app:showAsAction="ifRoom" />

</menu>