<?xml version="1.0" encoding="utf-8"?>
<!-- Фрейм диалогового окна (ADD, EDIT) для обработки OTPauth. -->
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ilLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ed_label"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:maxLength="64"
                tools:text="Label"
                tools:ignore="VisualLintTextFieldSize" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ilKey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/ed_secret"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edKey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="234567ABCDEFGHIJKLMNOPQRSTUVWXYZ"
                android:inputType="textCapCharacters|textPassword"
                android:maxLength="64"
                tools:text="MLARFFFFKLAQLNZASKFAABGRD2HBKKRT"
                tools:ignore="VisualLintTextFieldSize" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ilPeriod"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/period"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edPeriod"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="0123456789"
                android:inputType="number"
                android:maxLength="3"
                android:text="@string/period30" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/hash"
            android:textSize="16sp" />

        <RadioGroup
            android:id="@+id/radioHash"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/SHA1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:checked="true"
                android:text="@string/sha1" />

            <RadioButton
                android:id="@+id/SHA256"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/sha256" />

            <RadioButton
                android:id="@+id/SHA512"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sha512" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/digits"
            android:textSize="16sp" />

        <RadioGroup
            android:id="@+id/radioDigits"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/digits6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:layout_marginEnd="16dp"
                android:text="@string/digits6" />

            <RadioButton
                android:id="@+id/digits7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/digits7" />

            <RadioButton
                android:id="@+id/digits8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/digits8" />
        </RadioGroup>
    </LinearLayout>
</ScrollView>